--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,16 @@
     "import pandas as pd\n",
     "import scipy.stats as st\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import scipy\n",
+    "from scipy import stats\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +282,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +301,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dragon statistics:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mean            82.900000\n",
+       "median          80.000000\n",
+       "variance       658.010204\n",
+       "std_dev         25.651710\n",
+       "sample_size     50.000000\n",
+       "Name: HP, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grass statistics:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mean            66.052632\n",
+       "median          65.000000\n",
+       "variance       355.773796\n",
+       "std_dev         18.861967\n",
+       "sample_size     95.000000\n",
+       "Name: HP, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Since 5e-05 < 0.05, we reject the null hypothesis. This suggests that Dragon-type Pokémon have, on average, significantly more HP than Grass-type Pokémon.\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "df_dragon = df[(df[\"Type 1\"]==\"Dragon\") | (df[\"Type 2\"]== \"Dragon\")]\n",
+    "df_grass = df[(df[\"Type 1\"]==\"Grass\") | (df[\"Type 2\"]== \"Grass\")]\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "# Calculate dragon statistics\n",
+    "dragon_stat = df_dragon['HP'].agg(\n",
+    "    mean='mean',\n",
+    "    median='median',\n",
+    "    variance='var',\n",
+    "    std_dev='std',\n",
+    "    sample_size=\"count\"\n",
+    ")\n",
+    "\n",
+    "# Calculate grass statistics\n",
+    "grass_stat = df_grass['HP'].agg(\n",
+    "    mean='mean',\n",
+    "    median='median',\n",
+    "    variance='var',\n",
+    "    std_dev='std',\n",
+    "    sample_size=\"count\"\n",
+    ")\n",
+    "\n",
+    "print(\"Dragon statistics:\")\n",
+    "display(dragon_stat)\n",
+    "print(\"Grass statistics:\")\n",
+    "display(grass_stat)\n",
+    "\n",
+    "# Hypothesis: \n",
+    "#H1: mu_price dragon > mu_price grass\n",
+    "#H0: mu_price dragon <= mu_price grass\n",
+    "\n",
+    "dragon_stat_hp = df_dragon[\"HP\"]\n",
+    "grass_stat_hp = df_grass[\"HP\"]\n",
+    "\n",
+    "stat, p_val =st.ttest_ind(dragon_stat_hp,grass_stat_hp, equal_var=False, alternative = \"greater\")\n",
+    "\n",
+    "if p_val > alpha:\n",
+    "    print(f\"Since {round(p_val, 5)} > {alpha}, we cannot reject the null hypothesis. \"\n",
+    "          \"This suggests that there is not enough evidence to say Dragon-type Pokémon have more HP than Grass-type Pokémon.\")\n",
+    "else:\n",
+    "    print(f\"Since {round(p_val, 5)} < {alpha}, we reject the null hypothesis. \"\n",
+    "          \"This suggests that Dragon-type Pokémon have, on average, significantly more HP than Grass-type Pokémon.\")"
    ]
   },
   {
@@ -313,11 +410,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stat: HP has a P-value of 0.0. Since the P-value is lower than 0.05, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\n",
+      "\n",
+      "Stat: Attack has a P-value of 0.0. Since the P-value is lower than 0.05, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\n",
+      "\n",
+      "Stat: Defense has a P-value of 0.0. Since the P-value is lower than 0.05, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\n",
+      "\n",
+      "Stat: Sp. Atk has a P-value of 0.0. Since the P-value is lower than 0.05, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\n",
+      "\n",
+      "Stat: Sp. Def has a P-value of 0.0. Since the P-value is lower than 0.05, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\n",
+      "\n",
+      "Stat: Speed has a P-value of 0.0. Since the P-value is lower than 0.05, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "legendary_stats = df[df['Legendary'] == 1]\n",
+    "non_legendary_stats = df[df['Legendary'] == 0]\n",
+    "\n",
+    "statistics = {}\n",
+    "sts = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "for stat in sts :\n",
+    "    f_stat, p_val = stats.f_oneway(legendary_stats[stat], non_legendary_stats[stat])\n",
+    "    statistics[stat] = (f_stat, p_val)\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "for stat, (f_stat, p_val) in statistics.items():\n",
+    "    if p_val < alpha:\n",
+    "        print(f\"Stat: {stat} has a P-value of {round(p_val,4)}. Since the P-value is lower than {alpha}, we reject H0: there is a significant difference in stats between Legendary and Non-Legendary Pokémon.\\n\")\n",
+    "    else:\n",
+    "        print(f\"Stat: {stat} has a P-value of {round(p_val,4)}. Since the P-value is higher than {alpha}, we fail to reject H0: there is no significant difference in stats between Legendary and Non-Legendary Pokémon.\\n\")"
    ]
   },
   {
@@ -337,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +585,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,10 +615,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for houses close to school/hospital:\n",
+      "mean           9.246000e+04\n",
+      "median         9.450000e+04\n",
+      "variance       2.197430e+08\n",
+      "std_dev        1.482373e+04\n",
+      "sample_size    5.000000e+00\n",
+      "Name: median_house_value, dtype: float64\n",
+      "\n",
+      "Statistics for houses far from school/hospital:\n",
+      "mean           2.073347e+05\n",
+      "median         1.804000e+05\n",
+      "variance       1.345226e+10\n",
+      "std_dev        1.159839e+05\n",
+      "sample_size    1.699500e+04\n",
+      "Name: median_house_value, dtype: float64\n",
+      "P-value of 0.9999738999071939 > 0.05 (significance): we can't reject H0, therefore we can't affirm that the houses are more expensive.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as m\n",
+    "\n",
+    "def euclidean(row, reference):\n",
+    "    \"\"\"\n",
+    "    Input: dataframe with longitude and latitude as columns\n",
+    "    Input: reference as a tuple (x,y)\n",
+    "    \"\"\"\n",
+    "    long = row[\"longitude\"] # X (longitude)\n",
+    "    lat = row[\"latitude\"] # Y (latitude)\n",
+    "    (x,y) = reference\n",
+    "    \n",
+    "    distance = m.sqrt((long - x)**2 + (lat - y)**2)\n",
+    "    \n",
+    "    return distance\n",
+    "\n",
+    "school = (-118, 37)\n",
+    "hospital = (-122, 34)\n",
+    "\n",
+    "df[\"distance_hospital\"] = df.apply(euclidean, axis=1, reference=hospital)\n",
+    "df[\"distance_school\"] = df.apply(euclidean, axis=1, reference=school)\n",
+    "\n",
+    "thresh = 0.5\n",
+    "df[\"close_hospital\"] = df.apply(lambda x: \"close\" if x[\"distance_hospital\"] < thresh else \"far\", axis=1)\n",
+    "df[\"close_school\"] = df.apply(lambda x: \"close\" if x[\"distance_school\"] < thresh else \"far\", axis=1)\n",
+    "\n",
+    "df_close = df[(df[\"close_hospital\"] == \"close\" ) | (df[\"close_school\"] == \"close\" )][\"median_house_value\"]\n",
+    "df_far = df[(df[\"close_hospital\"] == \"far\" ) & (df[\"close_school\"] == \"far\" )][\"median_house_value\"]\n",
+    "\n",
+    "# Calculate statistics\n",
+    "df_close_stat = df_close.agg(\n",
+    "    mean='mean',\n",
+    "    median='median',\n",
+    "    variance='var',\n",
+    "    std_dev='std',\n",
+    "    sample_size=\"count\"\n",
+    ")\n",
+    "\n",
+    "df_far_stat = df_far.agg(\n",
+    "    mean='mean',\n",
+    "    median='median',\n",
+    "    variance='var',\n",
+    "    std_dev='std',\n",
+    "    sample_size=\"count\"\n",
+    ")\n",
+    "\n",
+    "# Display statistics\n",
+    "print(\"Statistics for houses close to school/hospital:\")\n",
+    "print(df_close_stat)\n",
+    "print(\"\\nStatistics for houses far from school/hospital:\")\n",
+    "print(df_far_stat)\n",
+    "\n",
+    "#Hypothesis:\n",
+    "# H1: Houses close to either a school or a hospital are more expensive\n",
+    "# H0: Houses close to either hospital or school are not more expensive\n",
+    "\n",
+    "\n",
+    "stat, p_val = st.ttest_ind(df_close,df_far, equal_var=False, alternative=\"greater\")\n",
+    "alpha = 0.05\n",
+    "if p_val > alpha:\n",
+    "    print(f\"P-value of {p_val} > {alpha} (significance): we can't reject H0, therefore we can't affirm that the houses are more expensive.\")\n",
+    "elif p_val < alpha:\n",
+    "    print(f\"P-value of {p_val} < {alpha} (significance): we reject H0, so the houses near the hospital or school are indeed more expensive.\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -512,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
